--- a/templates/include/plugin/cmdline.h.jinja
+++ b/templates/include/plugin/cmdline.h.jinja
@@ -50,7 +50,7 @@ constexpr std::string_view USAGE = R"({0}.
 {{ description }}
 
 Usage:
-  {{ curaengine_plugin_name }} [--address <address>] [--port <port>]
+  {{ curaengine_plugin_name }} [--address <address>] [--port <port>] [--tiles_path <tiles_path>]
   {{ curaengine_plugin_name }} (-h | --help)
   {{ curaengine_plugin_name }} --version
 
@@ -59,6 +59,7 @@ Options:
   --version                      Show version.
   -ip --address <address>        The IP address to connect the socket to [default: localhost].
   -p --port <port>               The port number to connect the socket to [default: 33800].
+  -t --tiles_path <tiles_path>   The path to the tiles directory [default: .].
 )";
 
 } // namespace plugin::cmdline
